apps/generic/overlays/daybook/patches/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: daybook
spec:
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: http
